k3s/monitoring/prometheus/99-grafana.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.vextech.dev`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
    middlewares:
      - name: no-auth
        namespace: monitoring
  tls: {}
